--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -1,7 +1,15 @@
 @import 'reset';
 @import url('https://fonts.googleapis.com/css?family=PT+Sans');
 
+
+
 $main-color: #222;
+
+@keyframes colo {
+  100% {
+    filter: hue-rotate(10deg)
+  }
+}
 
 body,
 button,
@@ -41,14 +49,14 @@ textarea {
   border-radius: 5px;
   display: inline-block;
   border: none;
+
+  &:hover {
+    animation: colo 3s linear infinite;
+  }
 }
 
 
-.characters {
-  display: flex;
-}
-
-.choices {
+.characters, .choices {
   display: flex;
 }
 
@@ -82,9 +90,10 @@ textarea {
   text-align: right;
   top: 16px;
   right: 16px;
-  line-height: 120%;
+  line-height: 125%;
 
   span {
     font-weight: bold;
+    margin-left: 5px;
   }
 }
