add characters images and add steps 10-15

--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -128,3 +128,19 @@ textarea {
 .gold {
   color: yellow;
 }
+
+.Voleur, .Guerrier, .Mage {
+  background-position: cover;
+  background-size: cover;
+}
+.Voleur {
+  background-image: url(../img/rogue.jpg);
+}
+
+.Guerrier {
+  background-image: url(../img/warrior.jpg);
+}
+
+.Mage {
+  background-image: url(../img/wizard.jpg);
+}
