--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -25,10 +25,14 @@ textarea {
 }
 
 .big-header {
+  position: relative;
+  z-index: 5;
   transition: opacity 0.7s;
   opacity: 1;
   background-color: $main-color;
   height: 100vh;
+  background-position: cover;
+  background-size: cover;
 
   display: flex;
   justify-content: center;
@@ -58,6 +62,7 @@ textarea {
 .user-state {
   font-size: 16px;
   position: absolute;
+  z-index: 5;
   top: 8px;
   left: 16px;
 
@@ -83,6 +88,7 @@ textarea {
 
 .user-stats {
   position: absolute;
+  z-index: 5;
   text-align: right;
   top: 16px;
   right: 16px;
@@ -160,7 +166,7 @@ textarea {
     text-align: center;
     border-radius: 6px;
     position: absolute;
-    z-index: 1;
+    z-index: 5;
     width: 180px;
     top: 130%;
     left: 50%; 
@@ -177,6 +183,18 @@ textarea {
     opacity: 1;
   }
   
+}
+
+.game-background {
+  filter: brightness(60%);
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
 
