--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -144,7 +144,8 @@ textarea {
 }
 
 .button {
-  transition: transform 0.2s;
+  opacity: 0.7;
+  transition: transform 0.2s, opacity 0.2s;
   position: relative;
   margin: 15px;
   cursor: pointer;
@@ -175,6 +176,7 @@ textarea {
   }
 
   &:hover {
+    opacity: 1;
     transform: scale(0.96);
   }
 
